--- a/public/index.html
+++ b/public/index.html
@@ -3,8 +3,7 @@
   <head>
     <meta charset="utf-8" />
 
-    <!-- Favicon desde backend -->
-<link rel="icon" type="image/png" href="http://localhost:4000/uploads/icono/logo.png" />
+<link rel="icon" type="image/png" href="%PUBLIC_URL%/uploads/icono/logo.png" />
 
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -15,7 +14,7 @@
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 
-    <!-- Importar fuentes Montserrat y Playfair Display -->
+
     <link
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Playfair+Display:ital,wght@1,400&display=swap"
       rel="stylesheet"
