--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
 
-<link rel="icon" type="image/png" href="%PUBLIC_URL%/uploads/icono/logo.png" />
+<link rel="icon" type="image/png" href="/uploads/icono/logo.png" />
 
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
