--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
 
 
-    <link rel="icon" type="image/png" href="%PUBLIC_URL%/uploads/icono/logo.png" />
+    <link rel="icon" type="image/png" href="%PUBLIC_URL%/uploads/icono/logo_v2.png" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
