--- a/public/index.html
+++ b/public/index.html
@@ -2,31 +2,24 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-
-
-    <link rel="icon" type="image/png" href="%PUBLIC_URL%/uploads/icono/logo_v2.png" />
-
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Agustín Kalinowski - Photography" />
 
-  
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <title>Agustín Kalinowski - Photography</title>
 
-    
+    <!-- Favicon único -->
+    <link rel="icon" href="/icons/ping.png" type="image/png">
+    <link rel="shortcut icon" href="/icons/ping.png" type="image/png">
+    <link rel="apple-touch-icon" href="/icons/ping.png">
+
+    <!-- Google Fonts -->
     <link
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Playfair+Display:ital,wght@1,400&display=swap"
       rel="stylesheet"
     />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;1,400;0,700&display=swap"
-      rel="stylesheet"
-    />
-
-    <title>Agustín Kalinowski - Photography</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
 </html>
