Actualiza favicon a ping_v2 y corrige index.html

--- a/public/index.html
+++ b/public/index.html
@@ -8,10 +8,10 @@
 
     <title>Agustín Kalinowski - Photography</title>
 
-    <!-- Favicon único -->
-    <link rel="icon" href="/icons/ping.png" type="image/png">
-    <link rel="shortcut icon" href="/icons/ping.png" type="image/png">
-    <link rel="apple-touch-icon" href="/icons/ping.png">
+    <!-- Favicon PNG y ICO para compatibilidad máxima -->
+    <link rel="icon" href="%PUBLIC_URL%/icons/ping_v2.png" type="image/png">
+    <link rel="shortcut icon" href="%PUBLIC_URL%/icons/ping_v2.png" type="image/png">
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/icons/ping_v2.png">
 
     <!-- Google Fonts -->
     <link
